--- a/project.html
+++ b/project.html
@@ -2,117 +2,199 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fortnite Shoe Finder - Roboflow Project</title>
+  <title>Fortnite Footwear Finder - Roboflow Project</title>
   <style>
     body {
-      background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
-      font-family: 'Arial', sans-serif;
-      color: #fff;
       margin: 0;
       padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+      color: #fff;
     }
+
     header {
-      background-color: #9146FF;
-      padding: 20px;
       text-align: center;
+      padding: 40px 20px 20px;
+      background-color: #1e1e2f;
     }
+
     header h1 {
-      margin: 0;
-      font-size: 36px;
+      font-size: 2.8rem;
+      margin-bottom: 10px;
+      color: #00ffe7;
     }
-    section {
-      padding: 30px;
-      max-width: 900px;
-      margin: auto;
+
+    header p {
+      font-size: 1.1rem;
+      max-width: 700px;
+      margin: 0 auto;
+      color: #ccc;
     }
-    h2 {
+
+    .project-link {
+      text-align: center;
+      font-size: 2rem;
+      font-weight: bold;
+      margin: 40px 20px;
       color: #FFD700;
     }
-    img {
-      width: 100%;
-      max-width: 600px;
-      border-radius: 10px;
-      margin: 15px 0;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+
+    section {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 20px;
     }
-    a {
-      color: #1E90FF;
+
+    h2 {
+      font-size: 1.8rem;
+      color: #00ffe7;
+      margin-top: 40px;
+    }
+
+    p, li {
+      font-size: 1.05rem;
+      line-height: 1.6;
+      color: #e0e0e0;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    .images {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .images img {
+      width: 100%;
+      max-width: 450px;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+    }
+
+    .cta {
+      background-color: #12122d;
+      padding: 30px;
+      margin-top: 40px;
+      text-align: center;
+      border-radius: 10px;
+    }
+
+    .cta a {
+      display: inline-block;
+      margin-top: 10px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      color: #1e90ff;
+      text-decoration: none;
+    }
+
+    .cta a:hover {
+      text-decoration: underline;
+    }
+
+    .video-section ul {
+      list-style: none;
+      padding-left: 0;
+      margin-top: 15px;
+    }
+
+    .video-section li {
+      margin-bottom: 12px;
+    }
+
+    .video-section a {
+      color: #ffa500;
       text-decoration: none;
       font-weight: bold;
     }
-    a:hover {
+
+    .video-section a:hover {
       text-decoration: underline;
     }
-    .video-links ul {
-      list-style: none;
-      padding: 0;
-    }
-    .video-links li {
-      margin-bottom: 10px;
-    }
+
     footer {
       background-color: #111;
-      color: #ccc;
       text-align: center;
       padding: 20px;
+      color: #aaa;
+      margin-top: 60px;
+    }
+
+    @media (max-width: 768px) {
+      .images {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .project-link {
+        font-size: 1.4rem;
+      }
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Fortnite Shoe Finder - Roboflow Project</h1>
-</header>
+  <header>
+    <h1>Fortnite Footwear Finder</h1>
+    <p>Fortnite is one of the world’s most popular online games, boasting millions of players and a massive cultural footprint. Known for its vibrant skins and iconic crossovers, it’s more than a game—it’s a global phenomenon.</p>
+  </header>
 
-<section>
-  <h2>🎮 What is Fortnite?</h2>
-  <p>Fortnite is a globally popular online multiplayer game known for its fast-paced action, colorful graphics, and iconic character skins. With millions of active players and countless in-game cosmetics, it’s become a cultural phenomenon.</p>
-</section>
+  <div class="project-link">
+    Project: <a href="https://al-lenhart.github.io/fortnitefootwear/test4.html" target="_blank">https://al-lenhart.github.io/fortnitefootwear/test4.html</a>
+  </div>
 
-<section>
-  <h2>👟 Project Summary</h2>
-  <p>This project helps sneakerheads and casual Fortnite players alike identify real-life shoes featured in the game and find them online. While some in-game shoes are named, many don’t match their retail names, making them hard to find. For example:</p>
-  <ul>
-    <li>“Jordan 11 University Blue” (game) = <strong>Jordan 11 Retro Pantone</strong> (real life)</li>
-    <li>“Jordan 11 Black/Gym Red” (game) = <strong>Jordan 11 Playoffs Bred</strong> (real life)</li>
-  </ul>
-  <p>This tool bridges that gap using computer vision via Roboflow.</p>
-</section>
+  <section>
+    <h2>👟 The Idea</h2>
+    <p>Ever see a pair of kicks in Fortnite and wonder what they're called in real life? It’s not as easy as you’d think. While some shoes have obvious names, many don’t match their real-world names at all.</p>
+    <p>For example:</p>
+    <ul>
+      <li><strong>“Jordan 11 University Blue”</strong> in-game = <strong>Jordan 11 Retro Pantone</strong> IRL</li>
+      <li><strong>“Jordan 11 Black/Gym Red”</strong> in-game = <strong>Jordan 11 Playoffs Bred</strong> IRL</li>
+    </ul>
+    <p>This project uses Roboflow’s computer vision to help you identify Fortnite footwear and find them online easily.</p>
+  </section>
 
-<section>
-  <h2>📸 Model in Action</h2>
-  <img src="https://imgur.com/nfuKOwx.jpg" alt="Model Sample 1">
-  <img src="https://imgur.com/sj00VDZ.jpg" alt="Model Sample 2">
-  <img src="https://imgur.com/cMtsXXu.jpg" alt="Model Sample 3">
-  <img src="https://imgur.com/chCv4Ss.jpg" alt="Model Sample 4">
-</section>
+  <section>
+    <h2>📸 Model In Action</h2>
+    <div class="images">
+      <img src="https://imgur.com/nfuKOwx.jpg" alt="Model Output 1">
+      <img src="https://imgur.com/sj00VDZ.jpg" alt="Model Output 2">
+      <img src="https://imgur.com/cMtsXXu.jpg" alt="Model Output 3">
+      <img src="https://imgur.com/chCv4Ss.jpg" alt="Model Output 4">
+    </div>
+  </section>
 
-<section>
-  <h2>📱 Try It Yourself</h2>
-  <p>Ready to see it in action? Deploy the model on your iPhone here:</p>
-  <p><a href="https://demo.roboflow.com/buy-fortnite-shoes-irl/4?publishable_key=rf_RpE0bHiQm5MbD1aeGRca8gO8Dl13" target="_blank">Launch the Roboflow Model</a></p>
-  <p>For the best experience, open the videos below on your desktop and scan the screen using your phone’s camera through the Roboflow app. Watch it detect the sneakers on Fortnite characters in real time!</p>
-</section>
+  <section class="cta">
+    <h2>📱 Try It Yourself</h2>
+    <p>Ready to test it? Deploy the model directly on your iPhone by clicking below:</p>
+    <a href="https://demo.roboflow.com/buy-fortnite-shoes-irl/4?publishable_key=rf_RpE0bHiQm5MbD1aeGRca8gO8Dl13" target="_blank">Launch the Roboflow Model</a>
+    <p>📌 Pro tip: Open one of the Fortnite shoe videos below on your desktop. Then, point your phone’s camera (with Roboflow running) at the screen and watch the model detect sneakers live!</p>
+  </section>
 
-<section class="video-links">
-  <h2>🎬 Test with These YouTube Clips</h2>
-  <ul>
-    <li><a href="https://www.youtube.com/watch?v=WlPWQRbiGFk&ab_channel=blxrry" target="_blank">Test the "Nike Cortez Forrest Gump"</a></li>
-    <li><a href="https://www.youtube.com/watch?v=lpIyyPL6elo&t&ab" target="_blank">Test the "Jordan Retro 4 Manila"</a></li>
-    <li><a href="https://www.youtube.com/watch?v=2OXi5NzJuI4&ab_channel=blxrry" target="_blank">Test the "Nike Air Pegasus 41 Hot Punch"</a></li>
-    <li><a href="https://www.youtube.com/watch?v=aR_1qD1x1vE&t" target="_blank">Test the "Nike Air Foamposite One Galaxy"</a></li>
-    <li><a href="https://www.youtube.com/watch?v=cuSNPvUSacM&t" target="_blank">Test the "Jordan 3 Retro Palomino"</a></li>
-  </ul>
-</section>
+  <section class="video-section">
+    <h2>🎬 YouTube Test Clips</h2>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=aR_1qD1x1vE&t" target="_blank">Test the "Nike Air Foamposite One Galaxy"</a></li>
+      <li><a href="https://www.youtube.com/watch?v=lpIyyPL6elo&t&ab" target="_blank">Test the "Jordan Retro 4 Manila"</a></li>
+      <li><a href="https://www.youtube.com/watch?v=2OXi5NzJuI4&ab_channel=blxrry" target="_blank">Test the "Nike Air Pegasus 41 Hot Punch"</a></li>
+      <li><a href="https://www.youtube.com/watch?v=WlPWQRbiGFk&ab_channel=blxrry" target="_blank">Test the "Nike Cortez Forrest Gump"</a></li>
+      <li><a href="https://www.youtube.com/watch?v=cuSNPvUSacM&t" target="_blank">Test the "Jordan 3 Retro Palomino"</a></li>
+    </ul>
+  </section>
 
-<section>
-  <h2>💡 Business Potential: Affiliate Marketing</h2>
-  <p>This project can become a powerful affiliate marketing funnel. By partnering with platforms like StockX, Fortnite players could be guided directly from the game to real-world sneaker purchases. This allows for monetization through referral links and percentage cuts of sales — tapping into the multi-billion dollar sneaker resale market.</p>
-</section>
+  <section>
+    <h2>💼 Business Opportunity: Affiliate Marketing</h2>
+    <p>This concept can evolve into a profitable affiliate marketing venture. By partnering with sneaker resale platforms like StockX, Fortnite players can be directed to buy shoes they see in-game—earning a commission per sale. With millions of Fortnite fans and a booming sneaker market, the opportunity is massive.</p>
+  </section>
 
-<footer>
-  <p>© 2025 Roboflow x Fortnite Shoe Finder | Built for showcase and fun</p>
-</footer>
+  <footer>
+    &copy; 2025 Fortnite Footwear Finder | Built with 💡 using Roboflow & Imagination
+  </footer>
 
 </body>
 </html>
