--- a/test4.html
+++ b/test4.html
@@ -288,7 +288,7 @@
             cursor: pointer;
         }
 
-        /* Camera container - UPDATED FOR BETTER UX */
+        /* Camera container - FIXED FOR BETTER UX */
         #camera-container {
             display: none;
             position: fixed;
@@ -301,14 +301,16 @@
             border-radius: 10px;
             border: 3px solid var(--fortnite-yellow);
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
-            width: 80%;
+            width: 90%;
             max-width: 400px;
+            max-height: 80vh;
+            overflow: auto;
             text-align: center;
         }
 
         #camera-stream {
             width: 100%;
-            max-height: 300px;
+            max-height: 50vh;
             border-radius: 8px;
             object-fit: cover;
         }
@@ -318,18 +320,24 @@
             display: flex;
             justify-content: center;
             gap: 10px;
+            position: sticky;
+            bottom: 0;
+            padding: 10px 0;
+            background-color: rgba(10, 42, 72, 0.9);
         }
 
-        #capture-button {
-            background: linear-gradient(45deg, var(--fortnite-purple) 0%, var(--fortnite-blue) 100%);
-            flex: 1;
-            max-width: 150px;
-        }
-
-        #cancel-camera-button {
-            background: linear-gradient(45deg, #d32f2f 0%, #f44336 100%);
-            flex: 1;
-            max-width: 150px;
+        /* Responsive adjustments for very small screens */
+        @media (max-height: 500px) {
+            #camera-container {
+                top: 0;
+                transform: translateX(-50%);
+                max-height: 100vh;
+                border-radius: 0;
+            }
+            
+            #camera-stream {
+                max-height: 40vh;
+            }
         }
 
         /* Semi-transparent overlay behind camera */
@@ -431,18 +439,7 @@
             const debugInfo = document.getElementById('debug-info');
             if (debugInfo.style.display === 'block') {
                 debugInfo.style.display = 'none';
-                document.querySelector('.debug
-
-
-
-
-
-continue
-
-
-HTML
-
-.debug-toggle').textContent = 'Show Debug Info';
+                document.querySelector('.debug-toggle').textContent = 'Show Debug Info';
             } else {
                 debugInfo.style.display = 'block';
                 document.querySelector('.debug-toggle').textContent = 'Hide Debug Info';
