--- a/test4.html
+++ b/test4.html
@@ -365,7 +365,7 @@
             </div>
             <div class="step">
                 <div class="step-number">2</div>
-                <div class="step-text">Upload your picture using the "Upload Fortnite Character Image Here" button below.</div>
+                <div class="step-text">Upload your picture using the "Upload Fortnite Character Here" button below.</div>
             </div>
             <div class="step">
                 <div class="step-number">3</div>
