--- a/test4.html
+++ b/test4.html
@@ -306,7 +306,7 @@
         </div>
 
         <div class="image-upload">
-            <button id="upload-button" class="button" onclick="openImageOptionsModal()">Upload Fortnite Character Image Here</button>
+            <button id="upload-button" class="button" onclick="openImageOptionsModal()">Upload Fortnite Character Here</button>
             <input type="file" id="file-input" accept="image/*" onchange="handleImageUpload(event)">
             <div id="status"></div>
             <div class="loader" id="loader"></div>
