--- a/test4.html
+++ b/test4.html
@@ -293,11 +293,11 @@
         <div class="instructions">
             <div class="step">
                 <div class="step-number">1</div>
-                <div class="step-text">Use your phone to take a picture of your Fortnite character wearing your favorite kicks from the Fortnite shop.</div>
+                <div class="step-text">Take a screenshot or use your phone to take a photo of the character wearing the shoes. <strong>For best results, use a photo from the "Locker Loadout" screen.</strong></div>
             </div>
             <div class="step">
                 <div class="step-number">2</div>
-                <div class="step-text">Upload your picture using the "Upload Fortnite Character Here" button below.</div>
+                <div class="step-text">Upload your picture or take a new photo using the "Upload Fortnite Character Here" button below.</div>
             </div>
             <div class="step">
                 <div class="step-number">3</div>
