--- a/test4.html
+++ b/test4.html
@@ -270,19 +270,19 @@
         <div class="instructions">
             <div class="step">
                 <div class="step-number">1</div>
-                <div class="step-text"><strong>Step 1. Capture: </strong>Take a screenshot or photo of your character wearing the shoes (use the "Locker Loadout" screen for best results).</div>
+                <div class="step-text"><strong>Capture: </strong>Take a screenshot or photo of your character wearing the shoes (use the "Locker Loadout" screen for best results).</div>
             </div>
             <div class="step">
                 <div class="step-number">2</div>
-                <div class="step-text"><strong>Step 2. Upload: </strong>Use the "Upload Fortnite Character Here" button to submit your image or take a new photo.</div>
+                <div class="step-text"><strong>Upload: </strong>Use the "Upload Fortnite Character Here" button to submit your image or take a new photo.</div>
             </div>
             <div class="step">
                 <div class="step-number">3</div>
-                <div class="step-text"><strong>Step 3. Auto-Detect: </strong>Our system will auto-detect the shoes and populate the search field. Click "Find On StockX" to proceed.</div>
+                <div class="step-text"><strong>Auto-Detect: </strong>Our system will auto-detect the shoes and populate the search field. Click "Find On StockX" to proceed.</div>
             </div>
             <div class="step">
                 <div class="step-number">4</div>
-                <div class="step-text"><strong>Step 4. Purchase: </strong>Buy your favorite in-game shoes and wear them in real life!</div>
+                <div class="step-text"><strong>Purchase: </strong>Buy your kicks, straight from the game to your feet!</div>
             </div>
         </div>
 
