--- a/beta.html
+++ b/beta.html
@@ -674,7 +674,7 @@
                     <img id="image-preview" src="" alt="Image Preview">
                     
                     <div class="search-section">
-                        <input type="text" id="shoe-input" placeholder="Your shoe will appear here..." autofocus>
+                        <input type="text" id="shoe-input" placeholder="Your shoe will appear here...">
                         <button id="search-button" onclick="searchStockX()">Find on StockX</button>
                     </div>
                 </div>
